force-app/main/default/objects/SAI_Application_Agreement__c/SAI_Application_Agreement__c.object-meta.xml
<CustomObject>
    <label>SAI Application Agreement</label>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>SAI Application Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI Application Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>