force-app/main/default/objects/SAI_Application_Agreement__c/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <label>Agreement Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>