force-app/main/default/objects/SAI_Application_Agreement__c/fields/Agreement_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Source_System__c</fullName>
    <label>Agreement Source System</label>
    <length>10</length>
    <type>Text</type>
</CustomField>