force-app/main/default/objects/SAI_Application_Agreement__c/fields/Application_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Application_Source_System__c</fullName>
    <label>Application Source System</label>
    <length>10</length>
    <type>Text</type>
</CustomField>