force-app/main/default/objects/SAI_Application_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Agreement_Source_System__c</columns>
    <columns>Application_Number__c</columns>
    <columns>Application_Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>